[metadata]
version = 0.14.0
name = Kibbe - Kibana Development CLI help tool
description = Collection of commands and helpers to ease kibana development
long_description = file: README.md
author = Esteban Beltran
author_email = kibbe@academo.me

[flake8]
max_line_length = 100
experimental = true
ignore = E501

